styled logout window, fixed some design/alignment issues on index page

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -36,7 +36,7 @@ body{
 
 header{
     /* the bg image is temporary, I will make a better scalable version so that it looks better aligned */
-    background: url(../images/gridPattern.png) repeat-x fixed center center;
+    background: url(../images/grid.svg) fixed center center;
     height: 100vh;
     padding: 1em;
 
@@ -139,6 +139,11 @@ header{
 .darkmode{
     color:#117651;
     mix-blend-mode: normal;
+    transition: all 0.5s;
+}
+
+span.darkmode:hover{
+    color:#21c186;
 }
 
 .overlay.darkmode{
@@ -206,7 +211,7 @@ header h4{
 }
 
 .small-header{
-    background: none;
+    background: url(../images/grid.svg) fixed center center;
     display: flex;
     justify-content: start;
     height: auto;
@@ -236,7 +241,13 @@ a:hover{
     color: #02150e;
 }
 
+
+
 a:active{
+    color:#21c186;
+}
+
+a.darkmode:hover{
     color:#21c186;
 }
 
@@ -250,17 +261,43 @@ a:active{
 }
 
 .myBox{
-    background-color: orangered;
+    background-color: #02150e;
     color:#f2f2f2;
     position: fixed;
-    top: 50%;
-    width: 100vw;
+    top: 10vh;
+    left: 10vw;
+    width: 80vw;
     height: 0;
-    text-align: center;
     overflow: hidden;
-    transition:all 0.5s;
+    transition:all 0.8s;
     z-index: 12;
 }
+
+.mybox-content{
+    padding: 2em;
+    text-align: center;
+    
+}
+
+.mybox-content h2{
+    text-align: center;
+}
+
+.mybox-content span{
+    /* margin: 1em 1em; */
+    padding: 0 2em;
+    border: 1px solid #f2f2f2;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #02150e;
+    transition: all 0.5s;
+}
+
+.mybox-content span:hover{
+    background-color: #117651;
+}
+
+
 
 #closebox{
     cursor: pointer;
@@ -365,11 +402,23 @@ a:active{
 
 .ambassadors{
     text-align: center;
-    padding: 1em;
+    padding: 2em;
 }
 
 .ambassadors h3{
     font-weight: bold;
+}
+
+.right-col article{
+    margin-top: 4em;
+}
+
+.right-col img{
+    max-width: 100%;
+}
+
+.right-col p{
+    /* margin-top: 0; */
 }
 
 a:link{
@@ -399,6 +448,7 @@ a.img-link:active{
     text-align: center;
     padding: 0;
     font-size: .8em;
+    padding-top: 2em;
 }
 
 
@@ -408,6 +458,10 @@ a.img-link:active{
 
 .ambassadors-sect h3{
     font-weight: bold;
+}
+
+.reverse{
+    background-color: #ececec;
 }
 
 .fun-article{
@@ -506,45 +560,6 @@ footer{
         font-weight: bold;
     }
 
-    .hoverzone li:hover h2{
-        animation: menu-anim 1s forwards 1;
-        
-    }
-    
-    @keyframes menu-anim{
-        0%{transform: scaleX(1);}
-        50%{transform: scaleX(-1);}
-        100%{transform: scaleX(1);}
-    }
-
-    .hoverzone li ul{
-        position: absolute;
-        width: 12em;
-        right: 0px;
-        opacity: 0;
-        transition: all .5s; 
-    }
-
-    .hoverzone li:hover ul{
-        opacity: 1;
-    
-    }
-
-    .menu{
-        background-color: white;
-        padding: 1em;
-        margin:0;
-        height: auto;
-        opacity: 0.9;
-        z-index: 10;
-        /* border: red solid 3px; */
-    }
-    
-    .menu li{
-        list-style: none;
-        font-size: 1em;
-    }
-
     header h1{
         font-size: 10em;
     }
@@ -574,6 +589,10 @@ footer{
     a:hover{
         color: #02150e;
     }
+
+    a.darkmode:hover{
+        color:#21c186;
+    }
     
     a:active{
         color:#21c186;
@@ -582,6 +601,11 @@ footer{
     .ambassadors{
         display: flex;
         margin-top: 2em;
+    }
+
+    .title-sect{
+        margin-left: 1.8em;
+        margin-right: 1.8em;
     }
 
     .left-col{
@@ -612,9 +636,21 @@ footer{
     }
 
     .right-col img{
-        width: 320px;
-        height: 320px;
+        /* width: 320px;
+        height: 320px; */
+        max-width: 100%;
     }
+
+    .right-col article{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .right-col p{
+        text-align: left;
+    }
+
 
     .img-link:link{
         filter: grayscale(40%);
@@ -635,7 +671,6 @@ footer{
 
     .reverse{
         flex-direction: row-reverse;
-        background-color: #f2f2f2;
     }
 
     .ambassadors-sect div{
@@ -672,6 +707,10 @@ footer{
         display: flex;
         justify-content: center;
         /* align-items: end; */
+    }
+
+    .mybox-content span{
+        margin: 1em;
     }
 
    
